.provarCaches/00D410000011HE0EAM/objects/rstk__socontchg__c.object
<CustomObject>
    <description>socontchg__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__socontchg_socontract__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstk__socontchg_seqno__c)</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__socontchg_socontract__r.Name &amp; rstk__socontchg_seq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontchg_date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socontchg_desc__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontchg_periodbill__c</fullName>
        <label>Period Billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontchg_periodtype__c</fullName>
        <label>Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontchg_price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontchg_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontchg_seq__c</fullName>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__socontchg_seqno__c</fullName>
        <description>Sequence No.</description>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontchg_showinvoice__c</fullName>
        <label>Show on Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontchg_socontract__c</fullName>
        <label>Contract ID</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Contract Charges</relationshipLabel>
        <relationshipName>socontchgs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__socontchg_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Contract Charges</relationshipLabel>
        <relationshipName>socontchgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontchg_soprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Charges</relationshipLabel>
        <relationshipName>Contract_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__socontchg_socontract__c</columns>
        <columns>rstk__socontchg_desc__c</columns>
        <columns>rstk__socontchg_date__c</columns>
        <columns>rstk__socontchg_soprod__c</columns>
        <columns>rstk__socontchg_qty__c</columns>
        <columns>rstk__socontchg_soline__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Credit_Quantity_must_be_more_than_0</fullName>
        <active>true</active>
        <description>Credit Quantity must be more than 0</description>
        <errorConditionFormula>OR(ISBLANK(rstk__socontchg_qty__c), rstk__socontchg_qty__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>rstk__socontchg_qty__c</errorDisplayField>
        <errorMessage>Credit Quantity must be more than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Period_type_selection_is_required</fullName>
        <active>true</active>
        <description>Period type selection is required when Period Billing is enabled</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontchg_periodbill__c, &apos;Yes&apos;), ISBLANK(TEXT(rstk__socontchg_periodtype__c)))</errorConditionFormula>
        <errorDisplayField>rstk__socontchg_periodtype__c</errorDisplayField>
        <errorMessage>Period type selection is required when Period Billing is enabled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Product_Cannot_be_empty</fullName>
        <active>true</active>
        <description>Product Cannot be empty</description>
        <errorConditionFormula>ISBLANK(rstk__socontchg_soprod__c)</errorConditionFormula>
        <errorDisplayField>rstk__socontchg_soprod__c</errorDisplayField>
        <errorMessage>Product is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Product_cannot_be_changed</fullName>
        <active>true</active>
        <description>Product cannot be changed</description>
        <errorConditionFormula>ISCHANGED(rstk__socontchg_soprod__c)</errorConditionFormula>
        <errorDisplayField>rstk__socontchg_soprod__c</errorDisplayField>
        <errorMessage>Product cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sequence_cannot_be_changed</fullName>
        <active>true</active>
        <description>Sequence cannot be changed</description>
        <errorConditionFormula>ISCHANGED(rstk__socontchg_seqno__c)</errorConditionFormula>
        <errorDisplayField>rstk__socontchg_seqno__c</errorDisplayField>
        <errorMessage>Sequence cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Show_on_Invoice_selection_is_required</fullName>
        <active>true</active>
        <description>Show on Invoice selection is required when Period Billing is enabled</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontchg_periodbill__c, &apos;Yes&apos;), ISBLANK(TEXT(rstk__socontchg_showinvoice__c)))</errorConditionFormula>
        <errorDisplayField>rstk__socontchg_showinvoice__c</errorDisplayField>
        <errorMessage>Show on Invoice selection is required when Period Billing is enabled</errorMessage>
    </validationRules>
</CustomObject>